# cudaGemm

./: CMakeLists.txt  README.md  main.cu  test.cu  test_random.cpp  utils.cu
header/: utils.cuh
kernel/: kernel.cuh
record/: cublas.txt  v1.txt
